4.13.3 fix(mapjs): Increase colour contrast:
- `mapjs/src/themes/argmap-theme.json`: Change opposing, supporting,
node selection / activation and link selection colours
for higher contrast (for colour blind users).
Opposing much pinker now.
- `test/`: Add input files with thinner opposing lines
so easier to compare contrast visibility.

--- a/mapjs/site/mapjs-default-styles.css
+++ b/mapjs/site/mapjs-default-styles.css
@@ -135,7 +135,7 @@ div[data-mapjs-role=stage] {
 	font-weight: 400 !important;
 	text-align: center !important;
 	background-color: #cbf0ff !important;
-	border-color: #017eaf;
+	border-color: #0e96cb;
 	border-style: groove;
 	border-radius: 16px;
 }
@@ -200,7 +200,7 @@ div[data-mapjs-role=stage] {
 
 .selected-link .mapjs-link {
 	/* 1px outline doesn't always show up in chrome. */
-	outline: 1.5px dashed #8e22e0;
+	outline: 1.5px dashed #c67bff;
 }
 
 .drag-shadow {
